Ajout input dans le formulaire

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <form action="">
       <div>Insérer un texte ou un fichier</div>
-      <input></input><br>
+      <input type="text" name="Texte"></input><input type="file" name ="Fichier"></input><br>
       <input type="radio" name="Méthode" value="Chiffrer">Chiffrer<br>
       <input type="radio" name="Méthode" value="Déchiffrer">Déchiffrer<br>
     </form>
