--- a/index.html
+++ b/index.html
@@ -3,14 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>chiffrementadfgvx</title>
+    <title>Chiffrement ADFGVX</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
   </head>
   <body>
-    <form action="">
-      <div>Insérer un texte ou un fichier</div>
-      <input type="text" name="Texte"></input><input type="file" name ="Fichier"></input><br>
-      <input type="radio" name="Méthode" value="Chiffrer">Chiffrer<br>
-      <input type="radio" name="Méthode" value="Déchiffrer">Déchiffrer<br>
-    </form>
+    <div id="app"></div>
   </body>
 </html>
